disable publish CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,8 @@ jobs:
 
   publish:
     needs: [ build ]
-    if: ${{ github.ref == 'refs/heads/master' && github.repository == 'hoc081098/kotlin-channel-event-bus' }}
+#    if: ${{ github.ref == 'refs/heads/master' && github.repository == 'hoc081098/kotlin-channel-event-bus' }}
+    if: ${{ false }}
     strategy:
       matrix:
         os: [ macos-11 ]
