--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ macos-11 ]
+        os: [ macos-latest ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 45
     if: ${{ github.repository == 'hoc081098/kotlin-channel-event-bus' }}
@@ -85,7 +85,7 @@ jobs:
     if: ${{ false }}
     strategy:
       matrix:
-        os: [ macos-11 ]
+        os: [ macos-latest ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     steps:
