--- a/channel-event-bus/gradle.properties
+++ b/channel-event-bus/gradle.properties
@@ -1,3 +1,3 @@
 POM_NAME=kotlin-channel-event-bus
 POM_ARTIFACT_ID=channel-event-bus
-POM_DESCRIPTION=TODO
+POM_DESCRIPTION=Multi-keys, multi-producers, single-consumer event bus backed by Kotlinx Coroutines Channels
