--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ android-target = "33"
 # the Android compileSdkVersion to use
 android-compile = "33"
 
+android-gradle = "8.1.2"
+
 # the Android target to use in sample
 sample-android-target = "34"
 # the Android compileSdkVersion to use in sample
@@ -33,10 +35,10 @@ compose-rules-detekt = "0.3.2"
 
 androidx-lifecycle = "2.6.2"
 androidx-annotation = "1.7.0"
-androidx-activity = "1.8.0"
+androidx-activity = "1.8.1"
 androidx-compose-compiler = "1.5.4"
-androidx-navigation = "2.7.4"
-android-gradle = "8.1.2"
+androidx-navigation = "2.7.5"
+timber = "5.0.1"
 
 spotless = "6.22.0"
 detekt = "1.23.1"
@@ -82,6 +84,8 @@ androidx-compose-material = { module = "androidx.compose.material:material" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
 androidx-compose-runtime = { module = "androidx.compose.runtime:runtime" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
+
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
