--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,7 +36,7 @@ compose-rules-detekt = "0.3.5"
 androidx-lifecycle = "2.6.2"
 androidx-annotation = "1.7.0"
 androidx-activity = "1.8.1"
-androidx-compose-compiler = "1.5.5-dev-k1.9.21-163bb051fe5"
+androidx-compose-compiler = "1.5.5"
 androidx-navigation = "2.7.5"
 timber = "5.0.1"
 
