--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -18,7 +18,7 @@ jobs:
   android:
     strategy:
       matrix:
-        os: [ linux-latest ]
+        os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
