--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: KMP ViewModel
+site_name: Kotlin Channel Event Bus
 site_url: https://hoc081098.github.io/kotlin-channel-event-bus/docs/0.x
 repo_name: kotlin-channel-event-bus
 repo_url: https://github.com/hoc081098/kotlin-channel-event-bus
