--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,7 +36,7 @@ compose-rules-detekt = "0.3.11"
 androidx-lifecycle = "2.7.0"
 androidx-annotation = "1.7.1"
 androidx-activity = "1.8.2"
-androidx-compose-compiler = "1.5.5-dev-k1.9.21-163bb051fe5"
+ androidx-compose-compiler = "1.5.9"
 androidx-navigation = "2.7.7"
 timber = "5.0.1"
 
