--- a/detekt.yml
+++ b/detekt.yml
@@ -674,6 +674,9 @@ style:
   UnusedPrivateMember:
     active: true
     allowedNames: '(_|ignored|expected|serialVersionUID)'
+    ignoreAnnotated:
+      - Preview
+      - androidx.compose.desktop.ui.tooling.preview.Preview
   UseAnyOrNoneInsteadOfFind:
     active: true
   UseArrayLiteralsInAnnotations:
