--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-kotlin = "2.0.0"
-coroutines = "1.8.1"
-kotlinx-serialization-json = "1.6.3"
+kotlin = "2.0.20"
+coroutines = "1.9.0-RC.2"
+kotlinx-serialization-json = "1.7.1"
 kotlinx-collections-immutable = "0.3.7"
 
 # the Java version that the Java and Kotlin compilers will target
 java-target = "11"
 # the Java version that is used to run the Java and Kotlin compilers and various other tasks
-java-toolchain = "17"
+java-toolchain = "21"
 
 # the Android minSdkVersion to use
 android-min = "21"
@@ -16,38 +16,38 @@ android-target = "34"
 # the Android compileSdkVersion to use
 android-compile = "34"
 
-android-gradle = "8.4.0"
+android-gradle = "8.6.0"
 
 # the Android target to use in sample
 sample-android-target = "34"
 # the Android compileSdkVersion to use in sample
 sample-android-compile = "34"
 
-jetbrains-compose = "1.6.2"
+jetbrains-compose = "1.6.11"
 
 touchlab-stately = "2.0.7"
 napier = "2.7.1"
 flowExt = "1.0.0-RC"
 koin-core = "3.5.6"
 koin-compose = "1.1.5"
-coil = "2.6.0"
-compose-rules-detekt = "0.3.19"
+coil = "2.7.0"
+compose-rules-detekt = "0.4.10"
 
-androidx-lifecycle = "2.7.0"
-androidx-annotation = "1.7.1"
-androidx-activity = "1.9.0"
+androidx-lifecycle = "2.8.4"
+androidx-annotation = "1.8.2"
+androidx-activity = "1.9.1"
 androidx-compose-compiler = "1.5.11"
 androidx-navigation = "2.7.7"
-kmp-viewmodel = "0.7.1"
-solivagant = "0.3.0"
+kmp-viewmodel = "0.8.0"
+solivagant = "0.5.0"
 timber = "5.0.1"
 
 spotless = "6.25.0"
 detekt = "1.23.6"
 
-kotlinx-kover = "0.7.6"
+kotlinx-kover = "0.8.3"
 dokka = "1.9.20"
-kotlinx-binary-compatibility-validator = "0.14.0"
+kotlinx-binary-compatibility-validator = "0.16.3"
 
 vanniktech-maven-publish = "0.28.0"
 ktlint = "0.50.0"
@@ -100,6 +100,7 @@ timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 
