--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,8 +28,8 @@ jetbrains-compose = "1.6.11"
 touchlab-stately = "2.0.7"
 napier = "2.7.1"
 flowExt = "1.0.0-RC"
-koin-core = "3.5.6"
-koin-compose = "1.1.5"
+koin-core = "4.0.0-RC1"
+koin-compose = "4.0.0-RC1"
 coil = "2.7.0"
 compose-rules-detekt = "0.4.11"
 
