--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -15,7 +15,7 @@ env:
   GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -Dorg.gradle.daemon=false -Dkotlin.incremental=false -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
 
 jobs:
-  android:
+  android-android-kmpcompose:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
