--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "2.0.20"
-coroutines = "1.9.0-RC.2"
+coroutines = "1.9.0"
 kotlinx-serialization-json = "1.7.1"
 kotlinx-collections-immutable = "0.3.7"
 
